# animal-facts

./: Cargo.toml  README.md  fact-settings.toml
src/: animal.rs  config.rs  fact.rs  main.rs
src/animal/: resource_info.rs  util.rs
